# tictactoe_perez_ines

HW07/: Untitled.ipynb  hw07.md
HW07/tictactoe_ip2365/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  pyproject.toml
HW07/tictactoe_ip2365/.github/workflows/: ci-cd.yml
HW07/tictactoe_ip2365/docs/: Makefile  conf.py  example.ipynb  make.bat
HW07/tictactoe_ip2365/source/: conf.py  index.rst
HW07/tictactoe_ip2365/src/tictactoe_ip2365/: Untitled.ipynb  __init__.py  t.ipynb  tictactoe_ip2365.py
HW07/tictactoe_ip2365/tests/: test_tictactoe_ip2365.py
